ide/idea/src/main/gen/net/endlos/xdt99/xbas99/parser/Xbas99Parser.java
// This is a generated file. Not intended for manual editing.
package net.endlos.xdt99.xbas99.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static net.endlos.xdt99.xbas99.psi.Xbas99Types.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class Xbas99Parser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return xbas99File(b, l + 1);
  }

  /* ********************************************************** */
  // W_AT OP_LPAREN nexpr OP_COMMA nexpr OP_RPAREN |
  //     W_VALIDATE OP_LPAREN a_validate (OP_COMMA a_validate)* OP_RPAREN |
  //     W_BEEP |
  //     W_ERASE W_ALL |
  //     W_SIZE OP_LPAREN nexpr OP_RPAREN
  static boolean a_accept(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_accept")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = a_accept_0(b, l + 1);
    if (!r) r = a_accept_1(b, l + 1);
    if (!r) r = consumeToken(b, W_BEEP);
    if (!r) r = parseTokens(b, 0, W_ERASE, W_ALL);
    if (!r) r = a_accept_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // W_AT OP_LPAREN nexpr OP_COMMA nexpr OP_RPAREN
  private static boolean a_accept_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_accept_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, W_AT, OP_LPAREN);
    r = r && nexpr(b, l + 1);
    r = r && consumeToken(b, OP_COMMA);
    r = r && nexpr(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // W_VALIDATE OP_LPAREN a_validate (OP_COMMA a_validate)* OP_RPAREN
  private static boolean a_accept_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_accept_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, W_VALIDATE, OP_LPAREN);
    r = r && a_validate(b, l + 1);
    r = r && a_accept_1_3(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // (OP_COMMA a_validate)*
  private static boolean a_accept_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_accept_1_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!a_accept_1_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "a_accept_1_3", c)) break;
    }
    return true;
  }

  // OP_COMMA a_validate
  private static boolean a_accept_1_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_accept_1_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_COMMA);
    r = r && a_validate(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // W_SIZE OP_LPAREN nexpr OP_RPAREN
  private static boolean a_accept_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_accept_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, W_SIZE, OP_LPAREN);
    r = r && nexpr(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // OP_HASH? nexpr | sexpr
  static boolean a_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_call")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = a_call_0(b, l + 1);
    if (!r) r = sexpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_HASH? nexpr
  private static boolean a_call_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_call_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = a_call_0_0(b, l + 1);
    r = r && nexpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_HASH?
  private static boolean a_call_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_call_0_0")) return false;
    consumeToken(b, OP_HASH);
    return true;
  }

  /* ********************************************************** */
  // var_w
  static boolean a_dim(PsiBuilder b, int l) {
    return var_w(b, l + 1);
  }

  /* ********************************************************** */
  // W_AT OP_LPAREN nexpr OP_COMMA nexpr OP_RPAREN |
  //     W_BEEP |
  //     W_ERASE W_ALL |
  //     W_SIZE OP_LPAREN nexpr OP_RPAREN
  static boolean a_display(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_display")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = a_display_0(b, l + 1);
    if (!r) r = consumeToken(b, W_BEEP);
    if (!r) r = parseTokens(b, 0, W_ERASE, W_ALL);
    if (!r) r = a_display_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // W_AT OP_LPAREN nexpr OP_COMMA nexpr OP_RPAREN
  private static boolean a_display_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_display_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, W_AT, OP_LPAREN);
    r = r && nexpr(b, l + 1);
    r = r && consumeToken(b, OP_COMMA);
    r = r && nexpr(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // W_SIZE OP_LPAREN nexpr OP_RPAREN
  private static boolean a_display_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_display_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, W_SIZE, OP_LPAREN);
    r = r && nexpr(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // W_RELATIVE | W_SEQUENTIAL |
  //     W_DISPLAY | W_INTERNAL |
  //     W_INPUT | W_OUTPUT | W_APPEND | W_UPDATE |
  //     W_FIXED nexpr? | W_VARIABLE nexpr? |
  //     W_PERMANENT
  static boolean a_open(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_open")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, W_RELATIVE);
    if (!r) r = consumeToken(b, W_SEQUENTIAL);
    if (!r) r = consumeToken(b, W_DISPLAY);
    if (!r) r = consumeToken(b, W_INTERNAL);
    if (!r) r = consumeToken(b, W_INPUT);
    if (!r) r = consumeToken(b, W_OUTPUT);
    if (!r) r = consumeToken(b, W_APPEND);
    if (!r) r = consumeToken(b, W_UPDATE);
    if (!r) r = a_open_8(b, l + 1);
    if (!r) r = a_open_9(b, l + 1);
    if (!r) r = consumeToken(b, W_PERMANENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // W_FIXED nexpr?
  private static boolean a_open_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_open_8")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, W_FIXED);
    r = r && a_open_8_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nexpr?
  private static boolean a_open_8_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_open_8_1")) return false;
    nexpr(b, l + 1);
    return true;
  }

  // W_VARIABLE nexpr?
  private static boolean a_open_9(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_open_9")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, W_VARIABLE);
    r = r && a_open_9_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // nexpr?
  private static boolean a_open_9_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_open_9_1")) return false;
    nexpr(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // (expr | OP_COMMA | OP_SEMI | OP_COLON)+
  static boolean a_print(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_print")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = a_print_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!a_print_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "a_print", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // expr | OP_COMMA | OP_SEMI | OP_COLON
  private static boolean a_print_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_print_0")) return false;
    boolean r;
    r = expr(b, l + 1);
    if (!r) r = consumeToken(b, OP_COMMA);
    if (!r) r = consumeToken(b, OP_SEMI);
    if (!r) r = consumeToken(b, OP_COLON);
    return r;
  }

  /* ********************************************************** */
  // lino | slist
  public static boolean a_then_else(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_then_else")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, A_THEN_ELSE, "<a then else>");
    r = lino(b, l + 1);
    if (!r) r = slist(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // W_USING (sexpr | lino)?
  static boolean a_using(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_using")) return false;
    if (!nextTokenIs(b, W_USING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, W_USING);
    r = r && a_using_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (sexpr | lino)?
  private static boolean a_using_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_using_1")) return false;
    a_using_1_0(b, l + 1);
    return true;
  }

  // sexpr | lino
  private static boolean a_using_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_using_1_0")) return false;
    boolean r;
    r = sexpr(b, l + 1);
    if (!r) r = lino(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // W_UALPHA | W_DIGIT | W_NUMERIC | sexpr
  static boolean a_validate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "a_validate")) return false;
    boolean r;
    r = consumeToken(b, W_UALPHA);
    if (!r) r = consumeToken(b, W_DIGIT);
    if (!r) r = consumeToken(b, W_NUMERIC);
    if (!r) r = sexpr(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // W_BANG
  public static boolean bang_comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bang_comment")) return false;
    if (!nextTokenIs(b, W_BANG)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, W_BANG);
    exit_section_(b, m, BANG_COMMENT, r);
    return r;
  }

  /* ********************************************************** */
  // COMMENT
  public static boolean dummy(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dummy")) return false;
    if (!nextTokenIs(b, COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMENT);
    exit_section_(b, m, DUMMY, r);
    return r;
  }

  /* ********************************************************** */
  // nexpr | sexpr
  static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    r = nexpr(b, l + 1);
    if (!r) r = sexpr(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // W_FUN_C
  public static boolean f_const(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "f_const")) return false;
    if (!nextTokenIs(b, "<numerical constant>", W_FUN_C)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, F_CONST, "<numerical constant>");
    r = consumeToken(b, W_FUN_C);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // W_FUN_N OP_LPAREN expr (OP_COMMA expr)* OP_RPAREN
  public static boolean f_num(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "f_num")) return false;
    if (!nextTokenIs(b, "<numerical function>", W_FUN_N)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, F_NUM, "<numerical function>");
    r = consumeTokens(b, 0, W_FUN_N, OP_LPAREN);
    r = r && expr(b, l + 1);
    r = r && f_num_3(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_COMMA expr)*
  private static boolean f_num_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "f_num_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!f_num_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "f_num_3", c)) break;
    }
    return true;
  }

  // OP_COMMA expr
  private static boolean f_num_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "f_num_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // W_FUN_S OP_LPAREN expr (OP_COMMA expr)* OP_RPAREN
  public static boolean f_str(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "f_str")) return false;
    if (!nextTokenIs(b, "<string function>", W_FUN_S)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, F_STR, "<string function>");
    r = consumeTokens(b, 0, W_FUN_S, OP_LPAREN);
    r = r && expr(b, l + 1);
    r = r && f_str_3(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_COMMA expr)*
  private static boolean f_str_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "f_str_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!f_str_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "f_str_3", c)) break;
    }
    return true;
  }

  // OP_COMMA expr
  private static boolean f_str_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "f_str_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // linedef slist?
  static boolean line(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "line")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = linedef(b, l + 1);
    p = r; // pin = 1
    r = r && line_1(b, l + 1);
    exit_section_(b, l, m, r, p, Xbas99Parser::line_recover);
    return r || p;
  }

  // slist?
  private static boolean line_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "line_1")) return false;
    slist(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // !CRLF
  static boolean line_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "line_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, CRLF);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LNUMBER
  public static boolean linedef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "linedef")) return false;
    if (!nextTokenIs(b, "<line number definition>", LNUMBER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LINEDEF, "<line number definition>");
    r = consumeToken(b, LNUMBER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // NUMBER
  public static boolean lino(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "lino")) return false;
    if (!nextTokenIs(b, "<line number>", NUMBER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LINO, "<line number>");
    r = consumeToken(b, NUMBER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (OP_LPAREN nexprn OP_RPAREN) |
  //     f_num | f_const | nvar_r | nvalue
  static boolean natom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "natom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<numerical term>");
    r = natom_0(b, l + 1);
    if (!r) r = f_num(b, l + 1);
    if (!r) r = f_const(b, l + 1);
    if (!r) r = nvar_r(b, l + 1);
    if (!r) r = nvalue(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // OP_LPAREN nexprn OP_RPAREN
  private static boolean natom_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "natom_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_LPAREN);
    r = r && nexprn(b, l + 1);
    r = r && consumeToken(b, OP_RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (satom rop satom) |    // string comparison yields -1, 0, +1
  //     nexprn
  static boolean nexpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nexpr")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = nexpr_0(b, l + 1);
    if (!r) r = nexprn(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // satom rop satom
  private static boolean nexpr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nexpr_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = satom(b, l + 1);
    r = r && rop(b, l + 1);
    r = r && satom(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (W_NOT nexprn) |
  //     (OP_MINUS nexprn) |
  //     ((natom | ssimple) (nop nexprn)*)
  public static boolean nexprn(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nexprn")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, NEXPRN, "<numerical expression>");
    r = nexprn_0(b, l + 1);
    if (!r) r = nexprn_1(b, l + 1);
    if (!r) r = nexprn_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
